# CherryEngine

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/main/: CMakeLists.txt  base_state.cpp  base_state.h  main.cpp  mystates.cpp  mystates.h
include/CherryEngine/: log.h  main.h  state.h
include/glad/: glad.h
src/: CMakeLists.txt  common.h  core.cpp  core.h  glad.c
src/CherryEngine/: log.cpp  main.cpp  state.cpp
src/log/: logbuf.cpp  logbuf.h
src/state/: state_impl.cpp  state_impl.h  state_machine.cpp  state_machine.h
