CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(CherryEngine)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CherryEngine_SOURCE_DIR}/bin")

SET(CherryEngine_VERSION_MAJOR 0)
SET(CherryEngine_VERSION_MINOR 1)
SET(CherryEngine_VERSION_PATCH 0)

ADD_COMPILE_OPTIONS(-std=c++17 -Wall -g)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(examples)
